# car-music-bot

./: .gitignore  Cargo.toml  tz.md
.sqlx/: query-0e3ef0b8264ad5ef1af8a3b9c6850e64b79d6a2417246ad4cd19c434d3e1e15f.json  query-41d1d0cca7ab0f2664b24387378eed2c8246830cc12ce0f7743dbcb7f1ecf50d.json  query-73deb89834b3899170e6c60501487174f95e4a175576634c30bbcf133df565d0.json  query-bca7ddf51c43aea2ab9fbacce168b26413ab3a56747879d0c2e4b5e0f5463806.json
src/: main.rs
src/application/: download_usecase.rs  mod.rs
src/domain/: audio_service.rs  mod.rs  user_repository.rs
src/infrastructure/: ffmpeg_processor.rs  mod.rs  sqlite_user_repo.rs
tests/: audio_tests.rs
