[package]
name = "music-loader-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
id3 = "1.16.4"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.13.2", features = ["json"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros"] }
teloxide = { version = "0.17.0", features = ["macros"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.21.0", features = ["v4"] }
